<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcome"
            android:textColor="@color/blue_500"
            android:textSize="42sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_confirm_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpf_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cpf"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpf_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telephone"
            android:inputType="textEmailAddress"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue_500"
            android:fontFamily="@font/roboto_bold"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_txt_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1.6"
                android:fontFamily="@font/roboto_light"
                android:gravity="right"
                android:text="@string/have_count"
                android:textColor="@color/blue_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/enter"
                android:textColor="@color/green_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_txt_login"
                app:layout_constraintTop_toTopOf="@id/text_txt_login" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>